--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 5px 30px;
@@ -77,5 +78,11 @@
   
   .dropdown-content a:hover {
     background-color: #f5f5f5;
+  }
+
+  .navbar-right hr{
+    width: 0.8px;
+    height: 100px;
+    border-left: 1px solid #eee;
   }
   
