--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+/* Add this to your index.html or CSS file */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+
 *{
   margin: 0;
   padding: 0;
